# ipm-zoo

./: CMakeLists.txt  README.md  build_wasm.sh
docs/: index.html  ipm-derivation.js  styles.css  symbolic-optimization-wasm.js  symbolic-optimization-wasm.wasm
include/: Assert.h  DifferentiationVisitor.h  Evaluation.h  Expr.h  ExprFactory.h  Expression.h  Helpers.h  SimplificationVisitor.h  SymbolicOperators.h  SymbolicOptimization.h  ToStringVisitor.h
include/NumericOptimization/: EnvironmentBuilder.h  Evaluation.h  LinearSolvers.h  NumericOptimization.h
include/NumericalOptimization/: EnvironmentBuilder.h  Evaluation.h  LinearSolvers.h  Optimizer.h
include/Utils/: Assert.h  Helpers.h  StackTrace.h  Timer.h
include/Visitors/: DifferentiationVisitor.h  SimplificationVisitor.h  ToStringVisitor.h
src/: Assert.h  CMakeLists.txt  DifferentiationVisitor.cpp  DifferentiationVisitor.h  Evaluation.cpp  Evaluation.h  Expr.cpp  ExprFactory.cpp  Expression.cpp  Expression.h  GaussianElimination.cpp  GaussianElimination.h  Helpers.h  IpmZoo.cpp  Lagrangian.cpp  Lagrangian.h  Optimization.cpp  Optimization.h  SimplificationVisitor.cpp  SimplificationVisitor.h  SymbolicOptimization.cpp  Timer.cpp  Timer.h  ToStringVisitor.cpp  ToStringVisitor.h  ipmZoo.cpp  wasm_bindings.cpp
src/NumericOptimization/: Evaluation.cpp  LinearSolvers.cpp
src/NumericalOptimization/: EnvironmentBuilder.cpp  Evaluation.cpp  LinearSolvers.cpp  Optimizer.cpp
src/Utils/: Assert.cpp  StackTrace.cpp  Timer.cpp
src/Visitors/: DifferentiationVisitor.cpp  SimplificationVisitor.cpp  ToStringVisitor.cpp
test/: CMakeLists.txt  Evaluation_test.cpp  ExprFactory_test.cpp  Expr_test.cpp  Expression_test.cpp  Helpers_test.cpp  Optimization_test.cpp  SymbolicOptimization_test.cpp
